# pseudotaxus-emacs

./: .dir-locals.el  .gitignore  AUTHORS  Changelog.md  DEPENDENCIES.txt  Makefile.am  NEWS  README.md  README.org  cast.sh  configure.ac  guix.scm
doc/: pseudotaxus-emacs.texi
pseudotaxus/: pseudotaxus.el
